Alteraçoa nop opacyti no arquivo.js e alteração de um letra no index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto</title>
+    <title>Projeto css</title>
 </head>
 <body>
     
 </body>
 <script>
-    alert("Eu to aqui")
+    alert("Eui")
 </script>
 </html>
